[package]
name = "openfare-lib"
version = "0.3.0"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2021"
repository = "https://github.com/openfare/openfare"
license-file = "LICENSE"
description = "Core library for OpenFare."

[dependencies]
anyhow = "1.0.31"
structopt = "0.3.14"
regex = "1.3.9"

env_logger = "0.8.2"
log = "0.4.8"
lazy_static = "1.4.0"
lazy-regex = "2.2.2"

url = { version = "2.1.1", features = ["serde"] }
reqwest = { version = "0.11.0", features = ["blocking"] }
chrono = "0.4"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bincode = "1.3.3"
hex = "0.4.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust_decimal = "1.20"
