[package]
name = "openfare-lib"
version = "0.6.2"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2021"
homepage = "https://openfare.dev"
repository = "https://github.com/openfare/openfare"
license-file = "LICENSE"
description = "OpenFare core library."

[dependencies]
anyhow = "1.0.31"
structopt = "0.3.14"
regex = "1.3.9"
dialoguer = "0.10.0"

env_logger = "0.8.2"
log = "0.4.8"
lazy_static = "1.4.0"
lazy-regex = "2.2.2"
strum = { version = "0.24.0", features = ["derive"] }

url = { version = "2.1.1", features = ["serde"] }
reqwest = { version = "0.11.0", features = ["blocking"] }
chrono = "0.4"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
jsonschema = "0.15.1"
bincode = "1.3.3"
hex = "0.4.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust_decimal = "1.22.0"

zip = "0.5.10"
flate2 = "1.0.14"
tar = "0.4.33"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.72"

[features]
# Force openssl-sys to statically link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
