[package]
name = "openfare"
version = "0.6.2"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2021"
homepage = "https://openfare.dev"
repository = "https://github.com/openfare/openfare"
license-file = "LICENSE"
default-run = "openfare"
description = "Micropayment funded software."

[dependencies]
openfare-lib = "0.6.2"
openfare-js = "0.6.2"
openfare-rs = "0.1.1"

anyhow = "1.0.31"
structopt = "0.3.21"
env_logger = "0.8.2"
log = "0.4.8"
regex = "1.3.9"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.1"
maplit = "1.0.2"
dialoguer = "0.10.0"
rust_decimal = "1.20"
jsonschema = "0.15.1"

directories = "3.0.1"
dirs = "3.0.1"
tempdir = "0.3.7"
shellexpand = "2.1.0"

url = { version = "2.1.1", features = ["serde"] }
reqwest = { version = "0.11.0", features = ["blocking", "json"] }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
blake3 = "0.3.7"
uuid = { version = "0.8.2", features = ["v4"] }
bincode = "1.2.1"

tokei = "12.1.2"
prettytable-rs = "0.8.0"
qrcode = { version = "0.12.0", features = ["image"] }
image = "0.23"
open = "2.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.72"

[features]
# Force openssl-sys to statically link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]